progress bar animation logic and stop gap responsivity on task creator

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,12 @@ input[name="indicval"] {
   margin-bottom: -1.1em;
 }
 
+@keyframes anim {
+  100% {
+    width: 100%;
+  }
+}
+
 ::-webkit-scrollbar {
   background-color: transparent;
 }
@@ -115,7 +121,7 @@ input[name="indicval"] {
   background-color: rgb(0, 121, 145);
   height: 100%;
   border-radius: 5px;
-  width: 1%;
+  width: 0%;
 }
 
 /* Schedule Main Grid */
@@ -572,10 +578,6 @@ input:checked + .slider:before {
     display: block;
   }
 
-  /* .tasknotesinput {
-    width: calc(100% - 4em);
-  } */
-
   #taskcreator {
     display: grid;
     grid-template-columns: 1fr max-content;
@@ -584,14 +586,13 @@ input:checked + .slider:before {
   }
   .lineup {
     grid-area: 1 / 1 / 2 / 3;
-    width: 75%;
+    overflow-x: auto;
   }
   .double {
   }
 
   .tasknotesinput .taskcreationinput {
     grid-area: 2 / 1 / 3 / 3;
-    /* width: calc(100%); */
   }
 
   #creatoradd {
